[package]
name = "common-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
enterprise = []

[lints]
workspace = true

[dependencies]
api.workspace = true
async-trait.workspace = true
common-catalog.workspace = true
common-error.workspace = true
common-event-recorder.workspace = true
common-grpc.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-time.workspace = true
greptime-proto.workspace = true
humantime.workspace = true
meta-client.workspace = true
serde.workspace = true
session.workspace = true
snafu.workspace = true
sql.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio.workspace = true
